[Update] BookExchangePage call api
